# GuitarTabs

./: .dockerignore  .envExample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.yaml  kino.json  logging.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
guitar_app/: config.py
guitar_app/application/common/exceptions/: __init__.py
guitar_app/application/common/usecases/: base.py
guitar_app/application/guitar/dto/: __init__.py  band.py  base.py  hit_counter.py  musician.py  song.py  tab.py  user.py  verse.py
guitar_app/application/guitar/exceptions/: __init__.py  band.py  musician.py  song.py  user.py
guitar_app/application/guitar/services/: __init__.py  band.py  musician.py  song.py  user.py
guitar_app/application/guitar/usecases/: __init__.py  band.py  musician.py  song.py  user.py
guitar_app/infrastructure/db/: uow.py
guitar_app/infrastructure/db/migrations/: env.py
guitar_app/infrastructure/db/models/: __init__.py  band.py  base.py  hit_counter.py  musician.py  secondaries.py  song.py  tab.py  user.py  verse.py
guitar_app/infrastructure/db/repositories/: __init__.py  band.py  base.py  favorite_songs.py  hit_counter.py  membership.py  musician.py  song.py  tab.py  user.py
guitar_app/presentation/api/: main.py
guitar_app/presentation/api/controllers/: __init__.py  band.py  musician.py  (+2 more)
guitar_app/presentation/tgbot/: __main__.py  main_factory.py  states.py
guitar_app/tgbot/: __main__.py  main_factory.py  states.py
guitar_app/tgbot/dialogs/: __init__.py  preview_data.py
guitar_app/tgbot/handlers/: __init__.py  base.py
guitar_app/tgbot/jinja/: chords.py
guitar_app/tgbot/middlewares/: data_load_middleware.py  init_middleware.py
guitar_app/tgbot/utils/: data.py  router.py
src/: config.py
src/application/models/: chord.py  song.py  verse.py
src/application/services/: modulation.py
src/infrastructure/admin/: __init__.py
src/infrastructure/db/: main.py  uow.py
src/presentation/admin/: main.py
src/presentation/api/: main.py
src/tgbot/: __main__.py  main_factory.py  states.py
src/tgbot/dialogs/: __init__.py  preview_data.py
src/tgbot/handlers/: __init__.py  base.py
src/tgbot/jinja/: chords.py
src/tgbot/middlewares/: __init__.py  data_load_middleware.py  init_middleware.py
src/tgbot/models/: verse.py
src/tgbot/utils/: data.py  router.py
src/tgbot/views/: commands.py
tests/: conftest.py  ц.py
tests/fixtures/: band_fixtures.py  musician_fixtures.py  song_fixtures.py  user_constants.py  user_fixtures.py
tests/integration/: conftest.py  test_band.py  test_musician.py  test_song.py
tests/integration/api/: test_band.py  test_song.py  test_user.py
tests/integration/bot/: conftest.py  test_menu.py  test_user.py
tests/mocks/: repo.py
tests/test_controllers/: conftest.py  test_band.py  test_musician.py  test_song.py  test_user.py
tests/test_unittest/: conftest.py  test_modulation.py
tests/unit/: conftest.py  test_modulation.py
tests/unit/services/: test_band_services.py  test_song_services.py  test_user_services.py
(+241 files in other folders)
