[tool.poetry]
name = "guitar-app"
version = "0.1.0"
description = ""
authors = ["artklk12 <artem-kulik@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
aiogram = "3.0.0b7"
aiogram_dialog = "2.0.0b20"
sqlalchemy = "^2.0.4"
alembic = "^1.9.4"
uvicorn = "^0.20.0"
asyncpg = "^0.27.0"
pydantic = {extras = ["dotenv"], version = "^1.10.5"}
sqladmin = "^0.9.0"
pytest = "^7.2.2"
pytest-asyncio = "^0.20.3"
pre-commit = "^3.1.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
