[tool.poetry]
name = "guitar-app"
version = "0.1.0"
description = ""
authors = ["artklk12 <artem-kulik@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.92.0"
aiogram = "3.0.0b7"
aiogram_dialog = "2.0.0b20"
sqlalchemy = "2.0.19"
alembic = "1.11.1"
uvicorn = "0.20.0"
asyncpg = "0.27.0"
pydantic = "1.10.12"
sqladmin = "0.9.0"
pytest = "7.4.0"
pytest-asyncio = "0.20.3"
pre-commit = "3.3.3"
aiofiles = "23.1.0"
aiohttp = "3.8.5"
aiosignal = "1.3.1"
anyio = "3.7.1"
async-timeout = "4.0.3"
attrs = "23.1.0"
babel = "2.9.1"
build = "0.10.0"
cachecontrol = "0.12.14"
cachetools = "4.2.4"
certifi = "2023.7.22"
cffi = "1.15.1"
cfgv = "3.3.1"
charset-normalizer = "3.2.0"
cleo = "2.0.1"
click = "8.1.6"
crashtest = "0.4.1"
cryptography = "41.0.2"
distlib = "0.3.7"
dulwich = "0.21.5"
filelock = "3.12.2"
flake8 = "6.1.0"
flake8-pyproject = "1.2.3"
frozenlist = "1.4.0"
greenlet = "2.0.2"
h11 = "0.14.0"
html5lib = "1.1"
httpcore = "0.17.3"
httpx = "0.24.1"
identify = "2.5.26"
idna = "3.4"
importlib-metadata = "6.8.0"
iniconfig = "2.0.0"
installer = "0.7.0"
itsdangerous = "2.1.2"
jaraco-classes = "3.3.0"
jeepney = "0.8.0"
jinja2 = "3.1.2"
jsonschema = "4.18.4"
jsonschema-specifications = "2023.7.1"
keyring = "23.13.1"
lockfile = "0.12.2"
magic-filter = "1.0.11"
mako = "1.2.4"
markupsafe = "2.1.3"
mccabe = "0.7.0"
more-itertools = "10.0.0"
msgpack = "1.0.5"
multidict = "6.0.4"
mypy = "1.5.1"
mypy-extensions = "1.0.0"
nodeenv = "1.8.0"
packaging = "23.1"
pexpect = "4.8.0"
pkginfo = "1.9.6"
platformdirs = "3.10.0"
pluggy = "1.2.0"
poetry = "1.5.1"
poetry-core = "1.6.1"
poetry-plugin-export = "1.4.0"
ptyprocess = "0.7.0"
pycodestyle = "2.11.0"
pycparser = "2.21"
pyflakes = "3.1.0"
pyproject-hooks = "1.0.0"
python-dotenv = "1.0.0"
python-multipart = "0.0.6"
pytz = "2023.3"
pyyaml = "6.0.1"
rapidfuzz = "2.15.1"
referencing = "0.30.0"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rpds-py = "0.9.2"
secretstorage = "3.3.3"
shellingham = "1.5.0.post1"
six = "1.16.0"
sniffio = "1.3.0"
starlette = "0.25.0"
tomlkit = "0.12.1"
trove-classifiers = "2023.7.6"
typing-extensions = "4.7.1"
urllib3 = "1.26.16"
virtualenv = "20.24.2"
webencodings = "0.5.1"
wtforms = "3.0.1"
yarl = "1.9.2"
zipp = "3.16.2"

[tool.poetry.scripts]
guitar-tgbot = 'guitar_app.tgbot.__main__:run'

[tool.pytest.ini_options]
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"